name:                alios-haskell-toolchain
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alios/alios-haskell-toolchain#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Barenhoff
maintainer:          mbarenh@alios.org
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-tools: alex, happy, hlint, hoogle, stylish-haskell, htags


source-repository head
  type:     git
  location: https://github.com/alios/alios-haskell-toolchain
